--- a/index.css
+++ b/index.css
@@ -40,7 +40,11 @@ html, body {
     height: 100%; 
 } 
 body{
-    background-color: rgb(234, 235, 244);
+    
+    background-color: #e5e5f7;
+    background: radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent) 17.5px 17.5px, linear-gradient(#00A6ED 1.4000000000000001px, transparent 1.4000000000000001px) 0 -0.7000000000000001px, linear-gradient(90deg, #00A6ED 1.4000000000000001px, #e5e5f7 1.4000000000000001px) -0.7000000000000001px 0;
+    background-size: 35px 35px, 35px 35px, 17.5px 17.5px, 17.5px 17.5px;
+    
 }
 p, li, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
@@ -84,7 +88,7 @@ main {
     justify-content: space-between;
 }
 .nav ul {
-    display: flex;
+    display: none;
     gap: 0.2rem;
 }
 
@@ -97,7 +101,7 @@ li {
 a {
     text-decoration: none;
     padding: 0.5rem;
-    background-color: rgba(252, 243, 122, 0.685);
+    background-color: rgb(252, 243, 122);
     color: darkblue;
     border-radius: 20px;
 }
@@ -123,25 +127,44 @@ a {
     padding-inline: 1rem;
     padding-block: 0.5rem;
 }
-
+h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
 
 .students {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1rem;
+    justify-content: space-around;
+    
 }
 .students button {
     width: 5rem;
     aspect-ratio: 1;
-    position: relative
+    position: relative;
+
+    background: rgb(201,219,241);
+    background: linear-gradient(313deg, rgba(201,219,241,1) 0%, rgba(255,255,255,1) 71%);
+    border-radius: 30px;
+    border: none;
+
+    font-size: 1rem;
+
+}
+.item:active {
+    transform: scale(0.9);
+    box-shadow: 2px 2px 10px #355070
 }
 .item9 {
     grid-area: ;
 }
 .count {
+    color: black;
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 10px;
+    right: 20px;
+    font-weight: 600;
 }
 
 
@@ -150,22 +173,14 @@ a {
     margin: 2rem auto;
     width: max-content;
     border-radius: 10px;
-   
+    background: rgb(237,237,237);
+background: radial-gradient(circle, rgba(237,237,237,1) 0%, rgba(251,196,178,1) 100%);
     padding: 1rem;
-   /*  background-repeat: no-repeat;
-    background-position: top 25% center;
-    background-size: 140%;
-    background-image: url(/images/cloud.png); */
-    
-/* to be removed in case of failure */
-    border: none;
-/* to be removed in case of failure */
 
 
-   background-color: transparent;
+ 
     color: var(--redOrange);
     border: 1px var(--OxfordBlue);
-  /*   border-style:double none none double; */
     box-shadow: 5px 5px 20px 1px var(--YInMnBlue);  
     text-align: center;
     font-family: var(--grandstander);
@@ -247,7 +262,7 @@ button {
 }
 
 .remove {
-    background-color: rgb(243, 94, 163);
+    background-color: transparent;
     color: darkblue;
     font-size: 2rem;
     border-radius: 20%;
@@ -299,8 +314,8 @@ button {
 .existing-lists {
     display: flex;
     flex-wrap: wrap;
-     
-    column-gap: 1rem;
+    justify-content: space-between;
+    
 }
 
 
@@ -317,7 +332,10 @@ button {
     flex: 1 1 3rem;
     position: relative;
     max-width: max-content;
-    background-image: linear-gradient(white, rgba(255, 192, 203, 0.485), rgba(68, 68, 239, 0.266), rgba(255, 192, 203, 0.485), white);
+    background: rgb(201,219,241);
+background: linear-gradient(313deg, rgba(201,219,241,1) 0%, rgba(255,255,255,1) 71%);
+
+
 }
 
 
@@ -401,7 +419,15 @@ button {
     }
 }
 
+.resetPoints {
+    margin: 2rem;
+}
+
+
 /* //// add remove animation
 /* //// change existing buttons 
 /* //// change divvy style
 /* //// change instructions and add CSS
+
+
+.reset
