--- a/index.css
+++ b/index.css
@@ -176,10 +176,12 @@ h1 {
     border: 1px solid black;
 }
 .count-disabled {
-    background-color: #F6511D;
-    /* position: absolute;
-    bottom: 0px;
-    right: 40px; */
+    color: grey;
+    font-size: 0.8rem;
+    font-family: var(--roboto);
+    font-weight: 100;
+    width: 100%;
+    border: none;
 
 }
 
