--- a/public/index.css
+++ b/public/index.css
@@ -41,7 +41,7 @@ html, body {
 } 
 body{
     max-width: 500px;
-    margin: 2rem auto;
+  
     background: rgb(237,237,237);
 background: linear-gradient(318deg, rgba(237,237,237,1) 13%, rgba(189,195,204,1) 16%, rgba(112,130,152,1) 48%, rgba(126,141,161,1) 52%, rgba(115,132,154,1) 88%, rgba(13,44,84,1) 94%);
     
@@ -96,16 +96,25 @@ li {
 
 }
 
-a {
+
+header {
+    height: 3rem;
+    display: flex;
+    padding-inline-end: 1rem;
+    justify-content: end;
+    align-items: center;
+}
+.nav-link {
     text-decoration: none;
-    padding: 0.5rem;
-    background-color: rgb(252, 243, 122);
-    color: darkblue;
-    border-radius: 20px;
+    color: whitesmoke;
+    font-style: italic;
+    font-size: 1.3rem;
+    border-bottom: 2px solid whitesmoke;
 }
-.nav div{
-    width: 3rem;
+.nav-link a {
+    
 }
+
 #key,
 #word-list,
 /* .output, */
@@ -135,14 +144,16 @@ h1 {
     flex-wrap: wrap;
     height: 100vh;
     justify-content: center;
+    font-family: var(--grandstander);
+    
 }
-.item {
+.itemCSS {
    height: calc(100vh / 5) ;
     width: 20%;
     position: relative;
     background: rgb(201,219,241);
     background: linear-gradient(313deg, rgba(201,219,241,1) 0%, rgba(255,255,255,1) 71%);
-  
+    color: var(--CarolinaBlue);
     border: none;
 
     font-size: 1rem;
@@ -151,23 +162,38 @@ h1 {
 
 
 
-.item:active {
+.itemCSS:active {
     transform: scale(0.9);
     box-shadow: 2px 2px 10px #355070
 }
-
+.reduce {
+    display: flex;
+    justify-content:flex-end;
+    align-items: flex-end;
+    color: black;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding-right: 5px;
+    width: 40px;
+    height: 40px;
+    font-weight: 600;
+    
+    font-weight: 900;
+    font-size: 2rem;
+    color: var(--redOrange);
+}
 .count {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
     position: absolute;
     bottom: 0px;
     right: 0px;
     width: 30px;
     height: 30px;
     font-weight: 600;
-    border: 1px solid black;
+    color: var(--OxfordBlue);
 }
 .count-disabled {
     color: grey;
@@ -259,17 +285,33 @@ h1 {
 .input {
     display: flex;
     flex-direction: column;
-    max-width: 40%;
+    max-width: 900%;
+    padding: 1rem;
 }
 
 .buttons {
     display: inherit;
     justify-content: space-around;
+    gap: 0.3rem;
 }
-
+.buttons button {
+    border-radius: 10px;
+    font-family: var(--grandstander);
+    color: var(--OxfordBlue);
+}
+#resetPoints {
+    background-color: var(--naplesYellow);
+}
+#submitToMongodb {
+    background-color: var(--CarolinaBlue);
+}
 
 button {
     display: block;
+    padding: 0.5rem;
+    border: none;
+    
+    
 }
 #random {
     width: 100px;
