--- a/public/index.css
+++ b/public/index.css
@@ -40,7 +40,7 @@ html, body {
     height: 100%; 
 } 
 body{
-    max-width: 500px;
+
   
     background: rgb(237,237,237);
 background: linear-gradient(318deg, rgba(237,237,237,1) 13%, rgba(189,195,204,1) 16%, rgba(112,130,152,1) 48%, rgba(126,141,161,1) 52%, rgba(115,132,154,1) 88%, rgba(13,44,84,1) 94%);
@@ -98,22 +98,21 @@ li {
 
 
 header {
-    height: 3rem;
+  
     display: flex;
     padding-inline-end: 1rem;
+    padding-block: 0.5rem;
     justify-content: end;
     align-items: center;
 }
 .nav-link {
     text-decoration: none;
     color: whitesmoke;
-    font-style: italic;
-    font-size: 1.3rem;
-    border-bottom: 2px solid whitesmoke;
+    /* font-style: italic; */
+    font-size: 2rem;
+    font-weight: bolder;
 }
-.nav-link a {
-    
-}
+
 
 #key,
 #word-list,
@@ -138,60 +137,71 @@ h1 {
     text-align: center;
     margin-bottom: 2rem;
 }
+main {
+    margin: 0 auto;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .students {
+    
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
-    justify-content: center;
-    font-family: var(--grandstander);
+    justify-content: space-around;
+    height: 60vh;
+    width: 100%;
     
+    font-family: var(--roboto);
 }
 .itemCSS {
-   height: calc(100vh / 5) ;
-    width: 20%;
     position: relative;
-    background: rgb(201,219,241);
+    width: 17%;
+    height: 17%;
+    margin-inline: 5px;
+    margin-inline: 5px;
+    /* height: calc(20% - 10px);
+    width: calc(20% - 10px); */
     background: linear-gradient(313deg, rgba(201,219,241,1) 0%, rgba(255,255,255,1) 71%);
     color: var(--CarolinaBlue);
     border: none;
-
+    
+    border-radius: 5px;
     font-size: 1rem;
 
 }
 
 
 
-.itemCSS:active {
+/* .itemCSS:active {
     transform: scale(0.9);
     box-shadow: 2px 2px 10px #355070
-}
+} */
 .reduce {
-    display: flex;
-    justify-content:flex-end;
-    align-items: flex-end;
-    color: black;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    padding-right: 5px;
-    width: 40px;
-    height: 40px;
-    font-weight: 600;
-    
-    font-weight: 900;
-    font-size: 2rem;
-    color: var(--redOrange);
-}
-.count {
+    /* border: 1px solid black; */
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: 0px;
+    top: 0px;
     right: 0px;
-    width: 30px;
-    height: 30px;
+    font-weight: 900;
+    font-size: 0.5rem;
+    color: var(--redOrange);
+}
+.count {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 20px;
+    height: 20px;
     font-weight: 600;
     color: var(--OxfordBlue);
 }
@@ -205,17 +215,20 @@ h1 {
 
 }
 
+.randomStuff{
+    display: flex;
+    justify-content: space-between;
+    width: calc(100% - 10px);
+
+
+}
+
 
 .output {
-    display: block;
-    margin: 2rem auto;
-    width: max-content;
+   
     border-radius: 10px;
-    background: rgb(237,237,237);
     background: radial-gradient(circle, rgba(237,237,237,1) 0%, rgba(251,196,178,1) 100%);
     padding: 1rem;
-
-
  
     color: var(--CarolinaBlue);
     border: 1px var(--OxfordBlue);
@@ -228,13 +241,14 @@ h1 {
 
 }
 
-.output:active {
+/* .output:active {
     transform: scale(0.98);
     box-shadow: 1px 1px 22px 1px rgba(0, 0, 0, 0.24);
-} 
+} */ 
 
 
 .collapsible {
+    margin-top: 10px;
     background-color: #eee;
     color: var(--CarolinaBlue);
     cursor: pointer;
@@ -293,11 +307,17 @@ h1 {
     display: inherit;
     justify-content: space-around;
     gap: 0.3rem;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    width: calc(100% - 10px);
 }
 .buttons button {
     border-radius: 10px;
     font-family: var(--grandstander);
     color: var(--OxfordBlue);
+    display: block;
+    padding: 0.5rem;
+    border: none;
 }
 #resetPoints {
     background-color: var(--naplesYellow);
@@ -306,20 +326,13 @@ h1 {
     background-color: var(--CarolinaBlue);
 }
 
-button {
-    display: block;
-    padding: 0.5rem;
-    border: none;
-    
-    
-}
-#random {
+/* #random {
     width: 100px;
     aspect-ratio: 1;
     border-radius: 50%;
     border: none;
     background: no-repeat center/110% url(/images/spin\ wheel.png);
-}
+} */
 
 .remove {
     background-color: transparent;
