--- a/public/basic.css
+++ b/public/basic.css
@@ -91,3 +91,23 @@ main {
     flex-direction: column;
     align-items: center;
 }
+
+#target{
+    position: relative;
+    cursor: pointer;
+}
+.hidden {
+    position: absolute;
+    left: -100px;
+    top: 30px;
+    transform: scale(0);
+    transition: 0.3s ease-out;
+}
+.hidden a {
+    line-height: 10px;
+    
+}
+.visible{
+    transform: scale(1);
+
+}
