--- a/public/index.css
+++ b/public/index.css
@@ -14,6 +14,8 @@ body{
     
     font-family: var(--roboto);
 }
+
+
 .itemCSS {
     position: relative;
     width: 17%;
@@ -95,38 +97,12 @@ body{
 .count-disabled {
     color: grey; 
 }
-.buttons {
-    display: inherit;
-    justify-content: space-evenly;
-    gap: 0.3rem;
-    margin-top: 20px;
-    width: calc(100% - 10px);
-}
-.buttons button {
-    border-radius: 10px;
-    font-family: var(--grandstander);
-    color: var(--OxfordBlue);
-    display: block;
-    padding: 0.5rem;
-    border: none;
-    margin-bottom: 1rem;
-}
-#resetPoints {
-    background-color: var(--naplesYellow);
-}
-#resetPoints:active {
+
+
+.button__animate{
     transform: translate(2px,3px);
     box-shadow: -5px -5px 2px var(--YInMnBlue);
 }
-#submitToMongodb {
-    background-color: var(--CarolinaBlue);
-
-}
-#submitToMongodb:active {
-    transform: translate(2px,3px);
-    box-shadow: -5px -5px 2px var(--YInMnBlue);
-}
-
 
 .outputAnimation {
     animation: word 500ms ease-in-out;
@@ -146,7 +122,9 @@ body{
     padding-inline: 1rem;
 
 }
-
+footer a {
+    cursor: pointer;
+}
 
 
 
